--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "http-errors": "^2.0.0",
     "pino": "^8.14.1",
     "pino-http": "^8.3.3",
-    "pino-pretty": "^10.0.0"
+    "pino-pretty": "^10.0.0",
+    "request": "^2.88.2",
+    "requests": "^0.3.0"
   }
 }
